--- a/Coiffure/Coiffure-war/web/WEB-INF/template/template.xhtml
+++ b/Coiffure/Coiffure-war/web/WEB-INF/template/template.xhtml
@@ -2,23 +2,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            <h:outputStylesheet library="primefaces" name="primeicons/primeicons.css" />
     </h:head>
     <h:body>
         <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="100" header="Top" resizable="true" closable="true" collapsible="true">
-                <h:outputText value="North unit content." />
+            <p:layoutUnit position="north" size="" header="Top" resizable="true" closable="true" collapsible="true" style="z-index: 2!important; overflow-y: hidden !important;">
+                <h:panelGrid style="float: left" columns="2" cellpadding="0" cellspacing="0">
+                    <p:graphicImage library="images" name="OIP.jpg" alt="Image" height="50" width="50" style="padding: 5px" />
+                    <h:panelGrid columns="1" cellpadding="0" cellspacing="0">
+                        <p:outputLabel value="CoiffureExp" style="font-size: 1.2em; font-weight: bold"/>
+                        <p:outputLabel value="Accueil"/>
+                    </h:panelGrid>
+                </h:panelGrid>
+                <h:panelGrid  style="float: right" columns="2" cellpadding="0" cellspacing="0">                    
+                    <h:panelGrid columns="3">
+                        <p:commandButton icon="pi pi-home" title="Accueil" />
+                        <p:commandButton icon="pi pi-power-off" title="Deconnection" />
+                        <p:commandButton icon="pi pi-user" title="Profil" />
+                    </h:panelGrid>
+                    <h:panelGrid columns="2">
+                        <p:graphicImage library="images" name="identite.jpg" alt="Image" height="50" width="50" style="padding: 5px; display: inline; margin-left: auto; margin-right: auto" />                                                                       
+                        <p:outputLabel value="pauline chimene" />
+                    </h:panelGrid>                     
+                </h:panelGrid>
             </p:layoutUnit>
 
-            <p:layoutUnit position="south" size="100" header="Bottom" resizable="true" closable="true" collapsible="true">
-                <h:outputText value="South unit content." />
+            <p:layoutUnit position="south" size="100" header="Bottom" resizable="true" closable="true" collapsible="true" style="text-align: center">
+                <h:outputLabel value="Copyright &copy; Website Coiffure 2020"/>
             </p:layoutUnit>
 
             <p:layoutUnit position="west" size="200" header="Left" resizable="true" closable="true" collapsible="true">
                 <h:outputText value="West unit content." />
+                <h:form>
+                    <p:menu toggleable="true">
+                        <p:submenu label="Dashboard">
+                            <p:menuitem value="dashboard" action="#{menuView.save}" icon="pi pi-save" />
+                        </p:submenu>
+                        <p:submenu label="Ajax">
+                            <p:menuitem value="Save" action="#{menuView.save}" icon="pi pi-save" />
+                            <p:menuitem value="Update" action="#{menuView.update}" icon="pi pi-refresh"/>
+                        </p:submenu>
+                        <p:submenu label="Non-Ajax">
+                            <p:menuitem value="Delete" action="#{menuView.delete}" icon="pi pi-times"/>
+                        </p:submenu>
+                        <p:submenu label="Navigations">
+                            <p:menuitem value="External" url="http://www.primefaces.org" icon="pi pi-home"/>
+                            <p:menuitem value="Internal" icon="pi pi-star"/>
+                        </p:submenu>
+                    </p:menu>
+                </h:form>             
+
             </p:layoutUnit>
 
             <p:layoutUnit position="east" size="200" header="Right" resizable="true" closable="true" collapsible="true" effect="drop">
@@ -26,7 +64,33 @@
             </p:layoutUnit>
 
             <p:layoutUnit position="center">
-                <h:outputText value="Center unit content." />
+                <h:outputText value="Center unit content." />                
+                <div id="page-wrapper">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h1 class="page-header">Dashboard</h1>
+                            </div>
+                            <!-- /.col-lg-12 -->                       
+                        </div>
+
+                        <!-- /.row -->
+                        <div class="row">
+                            <div class="col-lg-3 col-md-6" style="background-color: greenyellow">
+                                <h1>1</h1>
+                            </div>
+                            <div class="col-lg-3 col-md-6" style="background-color: yellow">
+                                <h1>2</h1>
+                            </div>
+                            <div class="col-lg-3 col-md-6" style="background-color: green">
+                                <h1>3</h1>
+                            </div>
+                            <div class="col-lg-3 col-md-6" style="background-color: red">
+                                <h1>4</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </p:layoutUnit>
 
         </p:layout>
